force-app/main/default/objects/Task__c/fields/Activated_By__c.field-meta.xml
<CustomField>
    <fullName>Activated_By__c</fullName>
    <label>Activated By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>