force-app/main/default/objects/Task__c/fields/Actual_Duration__c.field-meta.xml
<CustomField>
    <fullName>Actual_Duration__c</fullName>
    <formula>IF(AND(ISBLANK( Actual_End__c),ISBLANK( Actual_Start__c)),&quot;&quot;, 
IF(Actual_End__c- Actual_Start__c&gt; 0 , 
TEXT( FLOOR( Actual_End__c- Actual_Start__c) ) &amp; &quot;d &quot; 
&amp; TEXT( FLOOR( MOD( (Actual_End__c- Actual_Start__c) * 24, 24 ) ) ) &amp; &quot;h &quot; 
&amp; TEXT( ROUND( MOD( (Actual_End__c- Actual_Start__c) * 24 * 60, 60 ), 0 ) ) &amp; &quot;m&quot;, 
&quot;0d 0h 0m&quot; 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Duration</label>
    <type>Text</type>
</CustomField>