force-app/main/default/objects/Task__c/fields/Add_Comments__c.field-meta.xml
<CustomField>
    <fullName>Add_Comments__c</fullName>
    <label>Add Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>