force-app/main/default/objects/Task__c/fields/Advanced_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advanced Notifications</label>
    <type>Checkbox</type>
</CustomField>