force-app/main/default/objects/Task__c/fields/BackOut__c.field-meta.xml
<CustomField>
    <fullName>BackOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BackOut</label>
    <type>Checkbox</type>
</CustomField>