force-app/main/default/objects/Task__c/fields/BackOut_Point__c.field-meta.xml
<CustomField>
    <fullName>BackOut_Point__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BackOut Point</label>
    <type>Checkbox</type>
</CustomField>