force-app/main/default/objects/Task__c/fields/Baseline_Duration__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Duration__c</fullName>
    <formula>IF(AND(ISBLANK( Baseline_End__c),ISBLANK( Baseline_Start__c  )),&quot;&quot;,
IF(Baseline_End__c  -  Baseline_Start__c  &gt; 0 ,
  TEXT( FLOOR( Baseline_End__c  -  Baseline_Start__c ) ) &amp; &quot;d &quot;
  &amp; TEXT( FLOOR( MOD( (Baseline_End__c  -  Baseline_Start__c) * 24, 24 ) ) ) &amp; &quot;h &quot;
  &amp; TEXT( ROUND( MOD( (Baseline_End__c  -  Baseline_Start__c) * 24 * 60, 60 ), 0 ) ) &amp; &quot;m&quot;,
  &quot;0d 0h 0m&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Duration</label>
    <type>Text</type>
</CustomField>