force-app/main/default/objects/Task__c/fields/Baseline_End__c.field-meta.xml
<CustomField>
    <fullName>Baseline_End__c</fullName>
    <label>Baseline End</label>
    <type>DateTime</type>
</CustomField>