force-app/main/default/objects/Task__c/fields/Baseline_Start__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Start__c</fullName>
    <label>Baseline Start</label>
    <type>DateTime</type>
</CustomField>