force-app/main/default/objects/Task__c/fields/BO_IDBefore__c.field-meta.xml
<CustomField>
    <fullName>BO_IDBefore__c</fullName>
    <label>BO_IDBefore</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>