force-app/main/default/objects/Task__c/fields/BO_IdText__c.field-meta.xml
<CustomField>
    <fullName>BO_IdText__c</fullName>
    <formula>TEXT(BO_IDBefore__c) &amp;&quot;.&quot;&amp; TEXT(BO_IDAfter__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BO_IdText</label>
    <type>Text</type>
</CustomField>