force-app/main/default/objects/Task__c/fields/BO_Process__c.field-meta.xml
<CustomField>
    <fullName>BO_Process__c</fullName>
    <formula>TEXT(SOE__r.Backout__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BO Process</label>
    <type>Text</type>
</CustomField>