force-app/main/default/objects/Task__c/fields/Broken_Task__c.field-meta.xml
<CustomField>
    <fullName>Broken_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broken Task</label>
    <type>Checkbox</type>
</CustomField>