force-app/main/default/objects/Task__c/fields/Critical_Path__c.field-meta.xml
<CustomField>
    <fullName>Critical_Path__c</fullName>
    <label>Critical Path</label>
    <length>2</length>
    <type>Text</type>
</CustomField>