force-app/main/default/objects/Task__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>