force-app/main/default/objects/Task__c/fields/Dependency_Image__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Image__c</fullName>
    <formula>IF(TEXT(Dependency_Type__c) = &#39;None&#39;,IMAGE(&quot;/resource/Status/no_dep.png&quot;,&quot;Link&quot;,35,35), IF(TEXT(Dependency_Type__c) = &#39;Link&#39;,IMAGE(&quot;/resource/Status/link.png&quot;,&quot;Link&quot;,35,35), IF(TEXT(Dependency_Type__c) = &#39;Internal&#39;,IMAGE(&quot;/resource/Status/internal.png&quot;,&quot;Internal&quot;,35,35), IF(TEXT(Dependency_Type__c) = &#39;External&#39;,IMAGE(&quot;/resource/Status/external.png&quot;,&quot;External&quot;,35,35),null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependency</label>
    <type>Text</type>
</CustomField>