force-app/main/default/objects/Task__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF(Days__c!=0,TEXT(Days__c) +&#39;d &#39;,&#39;&#39;)+ TEXT( Hours__c )+&#39;h &#39;+TEXT( Minutes__c )+&#39;m&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>