force-app/main/default/objects/Task__c/fields/End_Stack__c.field-meta.xml
<CustomField>
    <fullName>End_Stack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End Stack</label>
    <type>Checkbox</type>
</CustomField>