force-app/main/default/objects/Task__c/fields/Execution_Detail__c.field-meta.xml
<CustomField>
    <fullName>Execution_Detail__c</fullName>
    <label>Execution Detail</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>