force-app/main/default/objects/Task__c/fields/First_Ready__c.field-meta.xml
<CustomField>
    <fullName>First_Ready__c</fullName>
    <label>First Ready</label>
    <type>DateTime</type>
</CustomField>