force-app/main/default/objects/Task__c/fields/Forecast_Duration__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Duration__c</fullName>
    <formula>IF(AND(ISBLANK( Forecast_End__c),ISBLANK( Forecast_Start__c)),&quot;&quot;, 
IF(Forecast_End__c- Forecast_Start__c&gt; 0 , 
TEXT( FLOOR( Forecast_End__c- Forecast_Start__c) ) &amp; &quot;d &quot; 
&amp; TEXT( FLOOR( MOD( (Forecast_End__c- Forecast_Start__c) * 24, 24 ) ) ) &amp; &quot;h &quot; 
&amp; TEXT( ROUND( MOD( (Forecast_End__c- Forecast_Start__c) * 24 * 60, 60 ), 0 ) ) &amp; &quot;m&quot;, 
&quot;0d 0h 0m&quot; 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Duration</label>
    <type>Text</type>
</CustomField>