force-app/main/default/objects/Task__c/fields/Forecast_End__c.field-meta.xml
<CustomField>
    <fullName>Forecast_End__c</fullName>
    <label>Forecast End</label>
    <type>DateTime</type>
</CustomField>