force-app/main/default/objects/Task__c/fields/Forecast_Start__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Start__c</fullName>
    <label>Forecast Start</label>
    <type>DateTime</type>
</CustomField>