force-app/main/default/objects/Task__c/fields/Id_After_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Id_After_Decimal__c</fullName>
    <formula>IF(OR(LEN(ID_Text__c) == 1,LEN(ID_Text__c) == 2),0,VALUE(RIGHT(ID_Text__c,LEN(ID_Text__c)-FIND(&#39;.&#39;,ID_Text__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id After Decimal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>