force-app/main/default/objects/Task__c/fields/Id_Before_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Id_Before_Decimal__c</fullName>
    <formula>VALUE(LPAD(ID_Text__c ,  FIND( &#39;.&#39;,ID_Text__c)))</formula>
    <label>Id Before Decimal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>