force-app/main/default/objects/Task__c/fields/ID_Text__c.field-meta.xml
<CustomField>
    <fullName>ID_Text__c</fullName>
    <label>ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>