force-app/main/default/objects/Task__c/fields/Internal_Task__c.field-meta.xml
<CustomField>
    <fullName>Internal_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Task</label>
    <type>Checkbox</type>
</CustomField>