force-app/main/default/objects/Task__c/fields/Is_Stack__c.field-meta.xml
<CustomField>
    <fullName>Is_Stack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Stack</label>
    <type>Checkbox</type>
</CustomField>