force-app/main/default/objects/Task__c/fields/Jump__c.field-meta.xml
<CustomField>
    <fullName>Jump__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jump</label>
    <type>Checkbox</type>
</CustomField>