force-app/main/default/objects/Task__c/fields/Jumped__c.field-meta.xml
<CustomField>
    <fullName>Jumped__c</fullName>
    <formula>IF( Jump__c  = TRUE, &#39;Yes&#39;, &#39;No&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jump</label>
    <type>Text</type>
</CustomField>