force-app/main/default/objects/Task__c/fields/Jumped_Duration__c.field-meta.xml
<CustomField>
    <fullName>Jumped_Duration__c</fullName>
    <label>Jumped Duration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>