force-app/main/default/objects/Task__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Link</label>
    <type>Checkbox</type>
</CustomField>