force-app/main/default/objects/Task__c/fields/Max_Task_In_Stack__c.field-meta.xml
<CustomField>
    <fullName>Max_Task_In_Stack__c</fullName>
    <label>Max Task In Stack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>