force-app/main/default/objects/Task__c/fields/MI_Keyword__c.field-meta.xml
<CustomField>
    <fullName>MI_Keyword__c</fullName>
    <label>MI Keyword</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>