force-app/main/default/objects/Task__c/fields/MileStone_Task__c.field-meta.xml
<CustomField>
    <fullName>MileStone_Task__c</fullName>
    <formula>IF( Milestone__c == true, &#39;Yes&#39;, &#39;No&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MileStone Task</label>
    <type>Text</type>
</CustomField>