force-app/main/default/objects/Task__c/fields/Mins_Changed__c.field-meta.xml
<CustomField>
    <fullName>Mins_Changed__c</fullName>
    <label>Mins Changed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>