force-app/main/default/objects/Task__c/fields/OriginalTask_Id__c.field-meta.xml
<CustomField>
    <fullName>OriginalTask_Id__c</fullName>
    <label>OriginalTask Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>