force-app/main/default/objects/Task__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Team_Member__c.Team__c</field>
            <operation>equals</operation>
            <valueField>$Source.Team__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Team_Member__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>