force-app/main/default/objects/Task__c/fields/Owner_Mail_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_Mail_ID__c</fullName>
    <label>Owner Mail ID</label>
    <type>Email</type>
</CustomField>