force-app/main/default/objects/Task__c/fields/PIN__c.field-meta.xml
<CustomField>
    <fullName>PIN__c</fullName>
    <label>PIN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>