force-app/main/default/objects/Task__c/fields/Planned_Duration__c.field-meta.xml
<CustomField>
    <fullName>Planned_Duration__c</fullName>
    <formula>IF(AND(ISBLANK( Planned_End__c),ISBLANK( Planned_Start__c)),&quot;&quot;,

IF(Planned_End__c- Planned_Start__c&gt; 0 , 
TEXT( FLOOR( Planned_End__c- Planned_Start__c) ) &amp; &quot;d &quot; 
&amp; TEXT( FLOOR( MOD( (Planned_End__c- Planned_Start__c) * 24, 24 ) ) ) &amp; &quot;h &quot; 
&amp; TEXT( ROUND( MOD( (Planned_End__c- Planned_Start__c) * 24 * 60, 60 ), 0 ) ) &amp; &quot;m&quot;, 
&quot;0d 0h 0m&quot; 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Duration</label>
    <type>Text</type>
</CustomField>