force-app/main/default/objects/Task__c/fields/Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Review_Comments__c</fullName>
    <label>Review Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>