force-app/main/default/objects/Task__c/fields/Run_Delay__c.field-meta.xml
<CustomField>
    <fullName>Run_Delay__c</fullName>
    <formula>IF(OR(ISPICKVAL( Status__c , &#39;Running&#39;),ISPICKVAL( Status__c , &#39;Completed&#39;),ISPICKVAL( Status__c , &#39;Force Completed&#39;)), ( End_Time__c -  Start_Time__c  )*24*60-( Planned_End__c -  Planned_Start__c )*24*60,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Run Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>