force-app/main/default/objects/Task__c/fields/RV_Comments__c.field-meta.xml
<CustomField>
    <fullName>RV_Comments__c</fullName>
    <label>RV Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>