force-app/main/default/objects/Task__c/fields/Secoundary_User__c.field-meta.xml
<CustomField>
    <fullName>Secoundary_User__c</fullName>
    <label>Secoundary User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>