force-app/main/default/objects/Task__c/fields/SOE__c.field-meta.xml
<CustomField>
    <fullName>SOE__c</fullName>
    <label>SOE</label>
    <referenceTo>SOE__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>