force-app/main/default/objects/Task__c/fields/Stack_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Stack_Owner_Name__c</fullName>
    <formula>Owner__r.Member__r.Name</formula>
    <label>Stack Owner Name</label>
    <type>Text</type>
</CustomField>