force-app/main/default/objects/Task__c/fields/Stage_Level__c.field-meta.xml
<CustomField>
    <fullName>Stage_Level__c</fullName>
    <label>Stage Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>BackOut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>