force-app/main/default/objects/Task__c/fields/Start_Delay__c.field-meta.xml
<CustomField>
    <fullName>Start_Delay__c</fullName>
    <formula>IF(OR( ISPICKVAL( Status__c , &#39;Ready&#39;),ISPICKVAL( Status__c , &#39;Waiting&#39;)),  (Forecast_Start__c -  First_Ready__c)*24*60 , 
IF(OR(ISPICKVAL( Status__c , &#39;Running&#39;),ISPICKVAL( Status__c , &#39;Completed&#39;)),  (Actual_Start__c -  First_Ready__c)*24*60,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>