force-app/main/default/objects/Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Build</fullName>
                <default>true</default>
                <label>Build</label>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Freeze</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Build-Jump</fullName>
            </value>
            <value>
                <fullName>Review-Jump</fullName>
            </value>
            <value>
                <fullName>Scheduled-Jump</fullName>
            </value>
            <value>
                <fullName>Freeze-Jump</fullName>
            </value>
            <value>
                <fullName>Waiting-Jump</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Completed-Jump</fullName>
            </value>
            <value>
                <fullName>Force Completed</fullName>
            </value>
            <value>
                <fullName>Jump</fullName>
            </value>
            <value>
                <fullName>ReRun</fullName>
            </value>
            <value>
                <fullName>To Be Released</fullName>
            </value>
            <value>
                <fullName>&lt;img src=p onerror=alert(42)/&gt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>