force-app/main/default/objects/Task__c/fields/Sum_Days__c.field-meta.xml
<CustomField>
    <fullName>Sum_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sum Days</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>