force-app/main/default/objects/Task__c/fields/Sum_Mins__c.field-meta.xml
<CustomField>
    <fullName>Sum_Mins__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sum Mins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>