force-app/main/default/objects/Task__c/fields/Sum_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Sum_Tasks__c</fullName>
    <label>Sum Tasks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>