force-app/main/default/objects/Task__c/fields/Sus_Status__c.field-meta.xml
<CustomField>
    <fullName>Sus_Status__c</fullName>
    <label>Sus Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>