force-app/main/default/objects/Task__c/fields/Task_Comments__c.field-meta.xml
<CustomField>
    <fullName>Task_Comments__c</fullName>
    <label>Task Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>