force-app/main/default/objects/Task__c/fields/Task_Title__c.field-meta.xml
<CustomField>
    <fullName>Task_Title__c</fullName>
    <label>Task Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>