force-app/main/default/objects/Task__c/fields/Technical_Detail__c.field-meta.xml
<CustomField>
    <fullName>Technical_Detail__c</fullName>
    <label>Technical Detail</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>