force-app/main/default/objects/Task__c/fields/Time_Bound__c.field-meta.xml
<CustomField>
    <fullName>Time_Bound__c</fullName>
    <label>Time Bound</label>
    <type>DateTime</type>
</CustomField>