force-app/main/default/objects/Task__c/fields/Total_Mins__c.field-meta.xml
<CustomField>
    <fullName>Total_Mins__c</fullName>
    <label>Total Mins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>