force-app/main/default/objects/Task__c/fields/Trigger_Comms__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Comms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Comms</label>
    <type>Checkbox</type>
</CustomField>