force-app/main/default/objects/Task__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF((Is_Stack__c=true),&#39;stage&#39;,
IF((End_Stack__c =true),&#39;Check point&#39;,
IF(AND((Is_Stack__c=false),(End_Stack__c =false)) ,&#39;Task&#39;,
null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>