force-app/main/default/objects/Task__c/fields/User_Defined_Critical_Path__c.field-meta.xml
<CustomField>
    <fullName>User_Defined_Critical_Path__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Define Critical patha as &#39;UC&#39;.</inlineHelpText>
    <label>User Defined Critical Path</label>
    <type>Checkbox</type>
</CustomField>