force-app/main/default/objects/Task__c/fields/WalkThrough_Comments__c.field-meta.xml
<CustomField>
    <fullName>WalkThrough_Comments__c</fullName>
    <label>WalkThrough Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>