force-app/main/default/objects/Task__c/fields/When_Task_Ready__c.field-meta.xml
<CustomField>
    <fullName>When_Task_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>When Task Ready</label>
    <type>Checkbox</type>
</CustomField>